--- a/app/src/main/res/layout/fragment_waifu_pic.xml
+++ b/app/src/main/res/layout/fragment_waifu_pic.xml
@@ -32,7 +32,7 @@
             android:id="@+id/tv_animeQuote"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="This is anime quote"
+            android:text=" "
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:textAlignment="center"
