--- a/app/src/main/res/layout/fragment_waifu_pic.xml
+++ b/app/src/main/res/layout/fragment_waifu_pic.xml
@@ -62,11 +62,14 @@
         android:paddingRight="12dp"
         android:layout_marginStart="10dp"
         android:text="Get Waifu Gif"
+        android:clickable="true"
+        android:foreground="?android:selectableItemBackground"
         android:textSize="15sp"
         app:backgroundTint="#e85819"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btn_get"
-        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
+        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
+        android:focusable="true" />
 
     <Button
         android:id="@+id/btn_get"
@@ -76,24 +79,30 @@
         android:paddingLeft="12dp"
         android:paddingRight="12dp"
         android:layout_marginStart="20dp"
+        android:clickable="true"
+        android:foreground="?android:selectableItemBackground"
         android:text="Get Waifu Pic"
         android:textSize="15sp"
         app:backgroundTint="#e85819"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
+        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
+        android:focusable="true" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_like"
+        android:id="@+id/btn_download"
         android:layout_width="65dp"
         android:layout_height="50dp"
         android:background="@drawable/button_like_background"
         android:padding="12dp"
         android:layout_marginEnd="20dp"
         app:backgroundTint="#e85819"
+        android:clickable="true"
+        android:foreground="?android:selectableItemBackground"
         app:icon="@drawable/ic_download"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
+        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
+        android:focusable="true" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
