--- a/app/src/main/res/layout/fragment_waifu_pic.xml
+++ b/app/src/main/res/layout/fragment_waifu_pic.xml
@@ -61,7 +61,7 @@
         android:paddingLeft="12dp"
         android:paddingRight="12dp"
         android:layout_marginStart="10dp"
-        android:text="Get Waifu Gif"
+        android:text="Waifu Gif"
         android:clickable="true"
         android:foreground="?android:selectableItemBackground"
         android:textSize="15sp"
@@ -81,7 +81,7 @@
         android:layout_marginStart="20dp"
         android:clickable="true"
         android:foreground="?android:selectableItemBackground"
-        android:text="Get Waifu Pic"
+        android:text="Waifu Pic"
         android:textSize="15sp"
         app:backgroundTint="#e85819"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -91,8 +91,8 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_download"
-        android:layout_width="65dp"
-        android:layout_height="50dp"
+        android:layout_width="55dp"
+        android:layout_height="52dp"
         android:background="@drawable/button_like_background"
         android:padding="12dp"
         android:layout_marginEnd="20dp"
@@ -104,5 +104,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scrollView2"
         android:focusable="true" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_like"
+        android:layout_width="55dp"
+        android:layout_height="52dp"
+        android:background="@drawable/button_like_background"
+        android:foreground="?android:selectableItemBackground"
+        android:padding="6dp"
+        app:backgroundTint="#e85819"
+        app:icon="@drawable/ic_like_icon"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btn_download"
+        app:layout_constraintStart_toEndOf="@+id/btn_gif"
+        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
