adding functionalities in dialog fragment using livedata

--- a/app/src/main/res/layout/fragment_dialog_waifu_liked.xml
+++ b/app/src/main/res/layout/fragment_dialog_waifu_liked.xml
@@ -3,15 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="350dp"
-    android:layout_height="500dp"
+    android:layout_height="600dp"
     android:layout_gravity="center"
     android:background="@drawable/dialog_fragment_background_corner"
     tools:context=".fragment.DialogWaifuLiked">
 
     <ImageView
         android:id="@+id/iv_waifuLike"
-        android:layout_width="match_parent"
+        android:layout_width="350dp"
         android:layout_height="260dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,6 +33,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="quote"
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="30dp"
             android:layout_marginTop="10dp"
             android:textAlignment="center"
             android:textColor="#fff"
@@ -49,7 +52,9 @@
         android:text="Delete like"
         android:layout_marginStart="30dp"
         android:textSize="15sp"
-        app:backgroundTint="#e85819"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        app:backgroundTint="#e74c3c"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scrollView3" />
@@ -61,6 +66,8 @@
         android:background="@drawable/button_corner"
         android:layout_marginEnd="30dp"
         android:text="Download pic"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:textSize="15sp"
         app:backgroundTint="#e85819"
         app:layout_constraintBottom_toBottomOf="parent"
