--- a/app/src/main/res/layout/fragment_dialog_waifu_liked.xml
+++ b/app/src/main/res/layout/fragment_dialog_waifu_liked.xml
@@ -48,14 +48,15 @@
         android:id="@+id/btn_fragmentDelete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/button_corner"
-        android:text="Delete like"
-        android:layout_marginStart="30dp"
-        android:textSize="15sp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
+        android:background="@drawable/button_corner"
+        android:foreground="?android:selectableItemBackground"
+        android:text="Unlike"
+        android:textSize="15sp"
         app:backgroundTint="#e74c3c"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btn_fragmentDownload"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scrollView3" />
 
@@ -68,6 +69,7 @@
         android:text="Download pic"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
+        android:foreground="?android:selectableItemBackground"
         android:textSize="15sp"
         app:backgroundTint="#e85819"
         app:layout_constraintBottom_toBottomOf="parent"
